--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="/images/logo.png" style="width: 40px;"  >
+            <img src="logo.png" style="width: 40px;"  >
             <h3>Master Card</h3>
         </div>
         <div class="chip">
-            <img src="/images/chip.png" style="width: 40px;">
+            <img src="chip.png" style="width: 40px;">
         </div>
         <div class="card-details">
             <div class="card-number-name">Card number</div>
